[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Font/dynamic_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/Avenixel-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -14
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "pop"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MainMenuLayer" type="Control" parent="."]
visible = false
margin_right = 207.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MainMenuLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -19.0
margin_right = -10.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="MainMenuLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 29.0561
margin_right = -10.0
margin_bottom = 67.0561
custom_fonts/font = ExtResource( 2 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="MainMenuLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_right = 63.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Guess
the
Time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLayer" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="GameLayer"]
margin_top = 14.0
margin_right = 40.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="GameLayer"]
margin_right = 207.0
margin_bottom = 14.0
value = 100.0

[node name="GameoverLayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameoverLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = -72.0
margin_right = 90.5
margin_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.266667, 0.227451, 0.227451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameoverLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -111.0
margin_right = 68.5
margin_bottom = -23.0
custom_fonts/font = ExtResource( 2 )
text = "Score:
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="GameoverLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -43.0
margin_right = 42.0
margin_bottom = -5.0
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="GameoverLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.5
margin_right = 91.5
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Gameover"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameoverLayer"]
anims/pop = SubResource( 2 )

[node name="AboutLayer" type="Control" parent="."]
visible = false
margin_right = 207.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="AboutLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -38.0
margin_right = 42.0
margin_bottom = -10.0
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="AboutLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.5
margin_right = 94.5
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Guess the
Time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -86.0
margin_right = 98.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.784314, 0.760784, 0.168627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rudy Vicario

Made for
#gamedevtvjam
2020"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuLayer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenuLayer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="GameoverLayer/ColorRect/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="AboutLayer/BackButton" to="." method="_on_BackButton_pressed"]
